# 42_python

module00/ex03/: NULL_not_found.py
module00/ex05/: building.py
module00/ex06/: filterstring.py  ft_filter.py
module00/ex09/: setup.py
module00/ex09/src/ft_package/: __init__.py
module01/ex00/: give_bmi.py
module01/ex01/: array2D.py
module01/ex02/: load_image.py
module01/ex03/: load_image.py  zoom.py
module01/ex04/: load_image.py  rotate.py
module01/ex05/: load_image.py  pimp_image.py  tester.py
module02/ex00/: load_csv.py
module02/ex01/: aff_life.py
module02/ex02/: aff_pop.py
module02/ex03/: projection_life.py
module03/ex00/: tester.py
module03/ex01/: S1E9.py  tester.py
module03/ex02/: DiamondTrap.py  S1E7.py
module03/ex03/: ft_calculator.py
module03/ex04/: ft_calculator.py
module04/ex00/: statistics.py
module04/ex01/: in_out.py
module04/ex02/: callLimit.py
module04/ex03/: new_student.py
python0/ex00/: Hello.py
python0/ex01/: format_ft_time.py
python0/ex02/: find_ft_type.py
python00/: readme.md
python00/ex02/: find_ft_type.py
python00/ex03/: NULL_not_found.py
python00/ex04/: whatis.py
python00/ex06/: filterstring.py  ft_filter.py
python00/ex07/: sos.py
python00/ex08/: Loading.py
python00/ex09/: pyproject.toml  setup.py
python00/ex09/src/ft_package/: ft_package.py
python00/ex09/src/ft_package.egg-info/: PKG-INFO
